--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -965,4 +965,9 @@
 
     <string name="echo_share_heading">My favorite podcasts</string>
     <string name="echo_share">My year %d in podcasts. #PodsenseEcho</string>
+    <string name="popular_shows_label">Popular Shows</string>
+    <string name="news_label">News</string>
+    <string name="comedy_label">Comedy</string>
+    <string name="technology_label">Technology</string>
+    <string name="business_label">Business</string>
 </resources>
