--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <!-- Activity and fragment titles -->
     <string name="provider_authority" translatable="false">de.danoeh.antennapod.provider</string>
-    <string name="feed_update_receiver_name">Update subscriptions</string>
+    <string name="feed_update_receiver_name">Update following</string>
     <string name="statistics_label">Statistics</string>
     <string name="add_feed_label">Add podcast</string>
     <string name="add_feed_label_short">Add</string>
@@ -22,9 +22,9 @@
     <string name="downloads_label">Downloads</string>
     <string name="downloads_label_short">Downloads</string>
     <string name="downloads_log_label">Download log</string>
-    <string name="subscriptions_label">Subscriptions</string>
-    <string name="subscriptions_label_short">Subscriptions</string>
-    <string name="subscriptions_list_label">Subscriptions list</string>
+    <string name="subscriptions_label">Following</string>
+    <string name="subscriptions_label_short">Following</string>
+    <string name="subscriptions_list_label">Following list</string>
     <string name="cancel_download_label">Cancel download</string>
     <string name="playback_history_label">Playback history</string>
     <string name="playback_history_label_short">History</string>
@@ -42,7 +42,7 @@
     <string name="swipe_left">Swipe left</string>
     <string name="enable_swipeactions">Enable swipe actions for this screen</string>
     <string name="change_setting">Change</string>
-    <string name="individual_subscription">Individual subscription</string>
+    <string name="individual_subscription">Individual following</string>
 
     <!-- Statistics fragment -->
     <string name="statistics_include_marked">Include duration of episodes that are just marked as played</string>
@@ -68,7 +68,7 @@
     <string name="home_new_empty_text">New episodes will show up here. You can then decide whether you are interested in them.</string>
     <string name="home_downloads_empty_text">You can download any episode to listen to it offline.</string>
     <string name="home_welcome_title">Welcome to Podsense!</string>
-    <string name="home_welcome_text">You are not subscribed to any podcasts yet. Open the menu to add a podcast.</string>
+    <string name="home_welcome_text">You are not following any podcasts yet. Open the menu to add a podcast.</string>
     <string name="notification_permission_denied">You denied the permission.</string>
     <string name="configure_home">Configure home screen</string>
     <string name="section_hidden">Hidden</string>
@@ -77,7 +77,7 @@
     <string name="queue_label_more">Queue »</string>
     <string name="inbox_label_more">Inbox »</string>
     <string name="downloads_label_more">Downloads »</string>
-    <string name="subscriptions_label_more">Subscriptions »</string>
+    <string name="subscriptions_label_more">Following »</string>
 
     <!-- Download Statistics fragment -->
     <plurals name="total_size_downloaded_podcasts">
@@ -102,7 +102,7 @@
     <!-- Bug report activity -->
     <string name="log_file_share_exception">No compatible apps found</string>
     <string name="export_logs_menu_title">Export detailed logs</string>
-    <string name="confirm_export_log_dialog_message">Detailed logs may contain sensitive information, such as your subscriptions list</string>
+    <string name="confirm_export_log_dialog_message">Detailed logs may contain sensitive information, such as your following list</string>
 
     <!-- Webview actions -->
     <string name="open_in_browser_label">Open in browser</string>
@@ -185,7 +185,7 @@
         <item quantity="one">New episode</item>
         <item quantity="other">New episodes</item>
     </plurals>
-    <string name="new_episode_notification_group_text">Your subscriptions have new episodes.</string>
+    <string name="new_episode_notification_group_text">Your following have new episodes.</string>
 
     <!-- Actions on feeds -->
     <string name="remove_all_inbox_label">Remove all from inbox</string>
@@ -215,8 +215,8 @@
     <string name="please_wait_for_data">Please wait until the data is loaded</string>
     <string name="updates_disabled_label">Updates disabled</string>
     <plurals name="updated_feeds_batch_label">
-        <item quantity="one">%d subscription updated.</item>
-        <item quantity="other">%d subscriptions updated.</item>
+        <item quantity="one">%d following updated.</item>
+        <item quantity="other">%d following updated.</item>
     </plurals>
     <string name="edit_tags">Edit tags</string>
     <string name="add_tag">Add tag</string>
@@ -406,8 +406,8 @@
     <string name="no_all_episodes_filtered_label">Try clearing the filter to see more episodes.</string>
     <string name="no_inbox_head_label">No episodes in the inbox</string>
     <string name="no_inbox_label">When new episodes arrive, they will be shown here. You can then decide if you are interested in them or not.</string>
-    <string name="no_subscriptions_head_label">No subscriptions</string>
-    <string name="no_subscriptions_label">To subscribe to a podcast, press the plus icon below.</string>
+    <string name="no_subscriptions_head_label">Not following</string>
+    <string name="no_subscriptions_label">To follow a podcast, press the plus icon below.</string>
 
     <!-- Preferences -->
     <string name="project_pref">Project</string>
@@ -490,10 +490,10 @@
     <string name="bottom_navigation_summary">Access the most important screens from everywhere, in a single tap</string>
     <string name="pref_nav_drawer_items_title">Customize navigation</string>
     <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer or bottom navigation</string>
-    <string name="pref_nav_drawer_feed_order_title">Set subscription order</string>
-    <string name="pref_nav_drawer_feed_order_sum">Change the order of your subscriptions</string>
-    <string name="pref_nav_drawer_feed_counter_title">Set subscription counter</string>
-    <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if \'Subscription Order\' is set to \'Counter\'.</string>
+    <string name="pref_nav_drawer_feed_order_title">Set following order</string>
+    <string name="pref_nav_drawer_feed_order_sum">Change the order of your following</string>
+    <string name="pref_nav_drawer_feed_counter_title">Set following counter</string>
+    <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the following counter. Also affects the sorting of following if \'Following Order\' is set to \'Counter\'.</string>
     <string name="pref_automatic_download_title">Automatic download</string>
     <string name="pref_automatic_download_global_description">Automatically download episodes from the inbox. Can be overridden per podcast.</string>
     <string name="pref_automatic_download_queue_title">Download queued</string>
@@ -562,8 +562,8 @@
     <string name="pref_delete_removes_from_queue_sum">Automatically remove an episode from the queue when it is deleted</string>
     <string name="pref_downloads_button_action_title">Play from downloads screen</string>
     <string name="pref_downloads_button_action_sum">Display play button instead of delete button on downloads screen</string>
-    <string name="pref_filter_feed_title">Subscription filter</string>
-    <string name="pref_filter_feed_sum">Filter your subscriptions in navigation drawer and subscriptions screen</string>
+    <string name="pref_filter_feed_title">Following filter</string>
+    <string name="pref_filter_feed_sum">Filter your following in navigation drawer and following screen</string>
     <string name="subscriptions_counter_greater_zero">Counter greater than zero</string>
     <string name="auto_downloaded">Auto downloaded</string>
     <string name="not_auto_downloaded">Not auto downloaded</string>
@@ -602,20 +602,20 @@
     <string name="sync_status_episodes_upload">Uploading episode changes…</string>
     <string name="sync_status_episodes_download">Downloading episode changes…</string>
     <string name="sync_status_upload_played">Uploading played status…</string>
-    <string name="sync_status_subscriptions">Synchronizing subscriptions…</string>
-    <string name="sync_status_wait_for_downloads">Waiting for subscriptions refresh…</string>
+    <string name="sync_status_subscriptions">Synchronizing following…</string>
+    <string name="sync_status_wait_for_downloads">Waiting for following refresh…</string>
     <string name="sync_status_success">Synchronization successful</string>
     <string name="sync_status_error">Synchronization failed</string>
 
     <!-- import and export -->
-    <string name="import_export_summary">Move subscriptions and queue to another device</string>
+    <string name="import_export_summary">Move following and queue to another device</string>
     <string name="database">Database</string>
     <string name="opml">OPML</string>
     <string name="html">HTML</string>
-    <string name="html_export_summary">Show your subscriptions to a friend</string>
-    <string name="opml_export_summary">Transfer your subscriptions to another podcast app</string>
-    <string name="opml_import_summary">Import your subscriptions from another podcast app</string>
-    <string name="database_export_summary">Transfer subscriptions, listened episodes and queue to Podsense on another device</string>
+    <string name="html_export_summary">Show your following to a friend</string>
+    <string name="opml_export_summary">Transfer your following to another podcast app</string>
+    <string name="opml_import_summary">Import your following from another podcast app</string>
+    <string name="database_export_summary">Transfer following, listened episodes and queue to Podsense on another device</string>
     <string name="database_import_summary">Import Podsense database from another device</string>
     <string name="opml_import_label">OPML import</string>
     <string name="opml_add_podcast_label">Import podcast list (OPML)</string>
@@ -630,7 +630,7 @@
     <string name="automatic_database_export_summary">Create a backup of the Podsense database every 3 days. Only keep the 5 most recent backups.</string>
     <string name="automatic_database_export_error">Error during automatic database backup</string>
     <string name="database_import_label">Database import</string>
-    <string name="database_import_warning">Importing a database will replace all of your current subscriptions and playing history. You should export your current database as a backup. Do you want to replace?</string>
+    <string name="database_import_warning">Importing a database will replace all of your current following and playing history. You should export your current database as a backup. Do you want to replace?</string>
     <string name="please_wait">Please wait&#8230;</string>
     <string name="export_error_label">Export error</string>
     <string name="export_success_title">Export successful</string>
@@ -676,7 +676,7 @@
 
     <!-- Synchronisation -->
     <string name="synchronization_choose_title">Choose synchronization provider</string>
-    <string name="synchronization_summary_unchoosen">You can choose from multiple providers to synchronize your subscriptions and episode play state with</string>
+    <string name="synchronization_summary_unchoosen">You can choose from multiple providers to synchronize your following and episode play state with</string>
     <string name="dialog_choose_sync_service_title">Choose synchronization provider</string>
     <string name="gpodnet_description">Gpodder.net is an open-source podcast synchronization service that you can install on your own server. Gpodder.net is independent of the Podsense project.</string>
     <string name="synchronization_summary_nextcloud">Gpoddersync is an open-source Nextcloud app that you can easily install on your own server. The app is independent of the Podsense project.</string>
@@ -695,13 +695,13 @@
     <string name="gpodnetauth_device_name_default">Podsense on %1$s</string>
     <string name="gpodnetauth_existing_devices">Existing devices</string>
     <string name="gpodnetauth_create_device">Create device</string>
-    <string name="gpodnetauth_finish_descr">Congratulations! Your gpodder.net account is now linked with your device. Podsense will from now on automatically sync subscriptions on your device with your gpodder.net account.</string>
+    <string name="gpodnetauth_finish_descr">Congratulations! Your gpodder.net account is now linked with your device. Podsense will from now on automatically sync following on your device with your gpodder.net account.</string>
     <string name="pref_gpodnet_setlogin_information_title">Change login information</string>
     <string name="pref_gpodnet_setlogin_information_sum">Change the login information for your gpodder.net account.</string>
     <string name="synchronization_sync_changes_title">Synchronize now</string>
-    <string name="synchronization_sync_summary">Synchronize subscription and episode state changes</string>
+    <string name="synchronization_sync_summary">Synchronize following and episode state changes</string>
     <string name="synchronization_full_sync_title">Force full synchronization</string>
-    <string name="synchronization_force_sync_summary">Re-synchronize all subscriptions and episode states</string>
+    <string name="synchronization_force_sync_summary">Re-synchronize all following and episode states</string>
     <string name="synchronization_logout">Logout</string>
     <string name="synchronization_login_status">Logged in as %1$s on %2$s.\n\nYou can choose your synchronization provider again once you have logged out.</string>
     <string name="pref_synchronization_logout_toast">Logout was successful</string>
@@ -728,9 +728,10 @@
     <string name="rating_later">Later</string>
 
     <!-- Online feed view -->
-    <string name="subscribe_label">Subscribe</string>
+    <string name="subscribe_label">Follow</string>
+    <string name="following_label">Following</string>
     <string name="preview_episodes">Episodes preview</string>
-    <string name="state_deleted_not_subscribed">You are not subscribed to this podcast yet. Subscribe for free to access it more easily and keep its playback history.</string>
+    <string name="state_deleted_not_subscribed">You are not following this podcast yet. Follow for free to access it more easily and keep its playback history.</string>
 
     <!-- Content descriptions for image buttons -->
     <string name="toolbar_back_button_content_description">Back</string>
@@ -759,9 +760,9 @@
     <string name="authentication_label">Authentication</string>
     <string name="authentication_descr">Change your username and password for this podcast and its episodes</string>
     <string name="feed_tags_label">Tags</string>
-    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
+    <string name="feed_tags_summary">Change the tags of this podcast to help organize your following</string>
     <string name="feed_folders_include_root">Show this podcast in main list</string>
-    <string name="multi_feed_common_tags_info">Only common tags from all selected subscriptions are shown. Other tags stay unaffected.</string>
+    <string name="multi_feed_common_tags_info">Only common tags from all selected following are shown. Other tags stay unaffected.</string>
     <string name="auto_download_inbox_category">Automatically download episodes from the inbox</string>
     <string name="episode_filters_label">Episode filter</string>
     <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
@@ -910,8 +911,8 @@
     <string name="on_demand_config_stream_text">Looks like you stream a lot. Do you want episode lists to show stream buttons?</string>
     <string name="on_demand_config_download_text">Looks like you download a lot. Do you want episode lists to show download buttons?</string>
 
-    <string name="shortcut_subscription_label">Subscription shortcut</string>
-    <string name="shortcut_select_subscription">Select subscription</string>
+    <string name="shortcut_subscription_label">Following shortcut</string>
+    <string name="shortcut_select_subscription">Select following</string>
     <string name="add_shortcut">Add shortcut</string>
 
     <!-- Echo -->
@@ -947,16 +948,16 @@
     <string name="echo_listened_after_emoji_run" translatable="false">\uD83C\uDFC3</string>
     <string name="echo_listened_after_comment_addict">You\'re a podcast addict</string>
 
-    <string name="echo_hoarder_title">We\'ve also been wondering: do you listen to the podcasts that you\'re subscribed to?</string>
+    <string name="echo_hoarder_title">We\'ve also been wondering: do you listen to the podcasts that you\'re following?</string>
     <string name="echo_hoarder_subtitle_hoarder">Looking at the numbers, we think you\'re a hoarder</string>
     <string name="echo_hoarder_emoji_cabinet" translatable="false">\uD83D\uDDC4\uFE0F</string>
-    <string name="echo_hoarder_comment_hoarder">Numbers don\'t lie, they say. And with only %1$d%% of your %2$d active subscriptions having been played this year, we\'re probably right.</string>
+    <string name="echo_hoarder_comment_hoarder">Numbers don\'t lie, they say. And with only %1$d%% of your %2$d active following having been played this year, we\'re probably right.</string>
     <string name="echo_hoarder_subtitle_medium">Check. No hoarding here.</string>
     <string name="echo_hoarder_emoji_check" translatable="false">\u2705</string>
-    <string name="echo_hoarder_comment_medium">You\'ve played episodes from %1$d%% of your %2$d active subscriptions this year. How about checking out \"%3$s\" again?</string>
+    <string name="echo_hoarder_comment_medium">You\'ve played episodes from %1$d%% of your %2$d active following this year. How about checking out \"%3$s\" again?</string>
     <string name="echo_hoarder_subtitle_clean">Clean!</string>
     <string name="echo_hoarder_emoji_clean" translatable="false">\u2728</string>
-    <string name="echo_hoarder_comment_clean">You\'ve played episodes from %1$d%% of your %2$d active subscriptions this year. We bet you keep your desk clean, too!</string>
+    <string name="echo_hoarder_comment_clean">You\'ve played episodes from %1$d%% of your %2$d active following this year. We bet you keep your desk clean, too!</string>
 
     <string name="echo_thanks_large">Thanks</string>
     <string name="echo_thanks_we_are_glad_old">for sticking with us this year!\n\nYou played your first episode with us in %1$s. It\'s been our honor to serve you since.</string>
